--- a/p8105_hw5_mt3775.Rmd
+++ b/p8105_hw5_mt3775.Rmd
@@ -41,10 +41,6 @@ If we increase n to 100, then we would definitely have reached 1 by that point.
 
 ## Problem 2
 
-
-When designing an experiment or analysis, a common question is whether it is likely that a true effect will be detected – put differently, whether a false null hypothesis will be rejected. The probability that a false null hypothesis is rejected is referred to as power, and it depends on several factors, including: the sample size; the effect size; and the error variance. In this problem, you will conduct a simulation to explore power in a one-sample t-test.
-
-First set the following design elements:
 ```{r}
 sim_power = function(mu) {
   sim_data = 
@@ -100,18 +96,28 @@ $\hat{\mu}$ are approximately the true value.
 ## Problem 3
 ```{r}
 homicide_df = read.csv("data/homicide-data.csv") 
+homicide_df[50810, "state"] = "OK"
 homicide_df = homicide_df |> 
-  unite("city_state", city:state, remove = FALSE)
+  mutate(
+    state = case_when(
+      state == "wI" ~ "WI",
+      TRUE ~ state
+    )
+  ) |> 
+  unite("city_state", city:state, remove = FALSE) 
 homicide_counts_df = homicide_df |> 
-  group_by(city_state) |> 
+  group_by(city_state, city, state) |> 
   summarise(total_homicide_count = n(),
-            unsolved_homicide_count =sum(disposition == "Closed without arrest" | 
+            unsolved_homicide_count = sum(disposition == "Closed without arrest" | 
                                            disposition == "Open/No arrest")
   ) |> 
   arrange(desc(total_homicide_count))
 
 ```
-For the city of Baltimore, MD, use the prop.test function to estimate the proportion of homicides that are unsolved; save the output of prop.test as an R object, apply the broom::tidy to this object and pull the estimated proportion and confidence intervals from the resulting tidy dataframe.
+After reading in the dataset, we see that one of the observations from Tulsa, OK, incorrectly
+has its state coded as AL, so we change that one value using indices. We also observe that
+Wisconsin's abbreviation is "wI", so we change that to "WI" to be consistent with 
+the others. The city with the most total homicide counts was Chicago. 
 ```{r}
 prop_test = function(x, y) {
   test = prop.test(x, y)
@@ -119,28 +125,35 @@ prop_test = function(x, y) {
     select(estimate, conf.low, conf.high)
   return(result)
 }
+
 prop_results = 
   homicide_counts_df |> 
   mutate(
     prop_test_res = map2(unsolved_homicide_count, total_homicide_count, prop_test)
   ) |> 
   unnest(prop_test_res)
+
 prop_results = 
   prop_results |> 
   mutate(prop_unsolved = unsolved_homicide_count/total_homicide_count,
          city_state = str_replace(city_state, "_", ", "))
+
 prop_results |> 
-  ggplot(aes(x = reorder(city_state, prop_unsolved, decreasing = TRUE), y = estimate)) +
+  ggplot(aes(x = reorder(city_state, prop_unsolved, decreasing = TRUE), y = estimate,
+             color = state)) +
   geom_point() +
   geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  labs(title = "Proportion of Unsolved Homicides in the United States",
+  labs(title = "Estimated Proportion of Unsolved Homicides in the United States",
        x = "City, State", y = "Estimate of Proportion",
        caption = "Organized according to proportion of unsolved homicides in descending order")
 
 ```
 
-
+From the results of `prop.test`, Chicago has the highest estimated proportion
+of unsolved homicides, and appears to have the narrowest confidence interval, which means
+that there is the least variability around that estimate. In this plot, I also colored by
+state since some states repeat. 
 
 
 
