--- a/p8105_hw5_mt3775.md
+++ b/p8105_hw5_mt3775.md
@@ -1,19 +1,11 @@
----
-title: "P8105 Homework 5"
-author: "Malika Top"
-date: "2024-11-15"
-output: github_document
----
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(tidyverse)
-library(dplyr)
-library(ggplot2)
-```
+P8105 Homework 5
+================
+Malika Top
+2024-11-15
 
 ## Problem 1
-```{r}
+
+``` r
 bday_sim = function(n) {
   bdays = sample(1:365, size = n, replace = TRUE)
   duplicate = length(unique(bdays)) < n
@@ -34,14 +26,17 @@ sim_res |>
   geom_col()
 ```
 
-The probability of having at least one other person share a birthday increases as the 
-number of people in the group, n, increases. The probability passes 0.5, when n = 23. 
-Even with n = 50 though, we don't get a probability of 1 exactly, but we get very close.
-If we increase n to 100, then we would definitely have reached 1 by that point.
+![](p8105_hw5_mt3775_files/figure-gfm/unnamed-chunk-1-1.png)<!-- -->
+
+The probability of having at least one other person share a birthday
+increases as the number of people in the group, n, increases. The
+probability passes 0.5, when n = 23. Even with n = 50 though, we don’t
+get a probability of 1 exactly, but we get very close. If we increase n
+to 100, then we would definitely have reached 1 by that point.
 
 ## Problem 2
 
-```{r}
+``` r
 sim_power = function(mu) {
   sim_data = 
     tibble(
@@ -66,12 +61,14 @@ sim_res |>
   summarise(power = mean(p.value < 0.05)) |> 
   ggplot(aes(x = mu, y = power)) +
   geom_point()
-
 ```
 
-As the true value of $\mu$ increases (i.e. the effect size), the power increases. 
+![](p8105_hw5_mt3775_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
 
-```{r}
+As the true value of $\mu$ increases (i.e. the effect size), the power
+increases.
+
+``` r
 avg_mu_hat = 
   sim_res |> 
   group_by(mu) |> 
@@ -87,16 +84,21 @@ ggplot(avg_mu_hat, aes(x = mu, y = avg_mu_hat)) +
   labs(color = "Samples where null was rejected")
 ```
 
-The sample average of $\hat{\mu}$ across tests for which the null is rejected (the red points),
-is not approximately equal for $\mu = {0, 1, 2, 3}$. We see that those values are just
-a bit above the true value (red points above black). This is because when we are selecting just
-the tests where the null is rejected, so we have values of $\hat{\mu}$ that are more extreme than
-the true value of $\mu$. Furthermore, we see that for larger values of $mu$, it's easier to 
-detect a difference of say 5 or 6, therefore, there's more power, and the sample averages of 
-$\hat{\mu}$ are approximately the true value. 
+![](p8105_hw5_mt3775_files/figure-gfm/unnamed-chunk-3-1.png)<!-- -->
+
+The sample average of $\hat{\mu}$ across tests for which the null is
+rejected (the red points), is not approximately equal for
+$\mu = {0, 1, 2, 3}$. We see that those values are just a bit above the
+true value (red points above black). This is because when we are
+selecting just the tests where the null is rejected, so we have values
+of $\hat{\mu}$ that are more extreme than the true value of $\mu$.
+Furthermore, we see that for larger values of $mu$, it’s easier to
+detect a difference of say 5 or 6, therefore, there’s more power, and
+the sample averages of $\hat{\mu}$ are approximately the true value.
 
 ## Problem 3
-```{r}
+
+``` r
 homicide_df = read.csv("data/homicide-data.csv") 
 homicide_df[50810, "state"] = "OK"
 homicide_df = homicide_df |> 
@@ -114,14 +116,18 @@ homicide_counts_df = homicide_df |>
                                            disposition == "Open/No arrest")
   ) |> 
   arrange(desc(total_homicide_count))
-
 ```
 
-After reading in the dataset, we see that one of the observations from Tulsa, OK, incorrectly
-has its state coded as AL, so we change that one value using indices. We also observe that
-Wisconsin's abbreviation is "wI", so we change that to "WI" to be consistent with 
-the others. The city with the most total homicide counts was Chicago. 
-```{r}
+    ## `summarise()` has grouped output by 'city_state', 'city'. You can override
+    ## using the `.groups` argument.
+
+After reading in the dataset, we see that one of the observations from
+Tulsa, OK, incorrectly has its state coded as AL, so we change that one
+value using indices. We also observe that Wisconsin’s abbreviation is
+“wI”, so we change that to “WI” to be consistent with the others. The
+city with the most total homicide counts was Chicago.
+
+``` r
 prop_test = function(x, y) {
   test = prop.test(x, y)
   result = broom::tidy(test) |> 
@@ -150,17 +156,12 @@ prop_results |>
   labs(title = "Estimated Proportion of Unsolved Homicides in the United States",
        x = "City, State", y = "Estimate of Proportion",
        caption = "Organized according to proportion of unsolved homicides in descending order")
-
 ```
 
-From the results of `prop.test`, Chicago has the highest estimated proportion
-of unsolved homicides, and appears to have the narrowest confidence interval, which means
-that there is the least variability around that estimate. In this plot, I also colored by
-state since some states repeat. 
+![](p8105_hw5_mt3775_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
 
-
-
-
-
-
-
+From the results of `prop.test`, Chicago has the highest estimated
+proportion of unsolved homicides, and appears to have the narrowest
+confidence interval, which means that there is the least variability
+around that estimate. In this plot, I also colored by state since some
+states repeat.
